hw06/test/zm-hw6-classFun-override-param-num-less.fmj
public int main() { }

public class C0  {
    public class C0 id(int a, float b, float [] c, float [] d, class C0 e, class C1 f){
        return new C0();
    }
}

public class C1 extends C0{
    public class C0 id(int a, float b){ //error
        return new C0();
    }
}
